# shared-sub-example

./: .gitignore  README.md  pyproject.toml
shared_sub/: asyncio.py  main.py  process.py
